@@ -3,13 +3,35 @@ package com.codetop.backtrack;
 import com.model.TreeNode;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class PathSum {
 
-    List<List<Integer>> result = new ArrayList<>();
-    List<Integer> tempList = new ArrayList<>();
+    /**
+     * 给你二叉树的根节点 root 和一个表示目标和的整数 targetSum 。判断该树中是否存在 根节点到叶子节点 的路径，
+     * 这条路径上所有节点值相加等于目标和 targetSum 。如果存在，返回 true ；否则，返回 false 。
+     * <p>
+     * 叶子节点 是指没有子节点的节点。
+     */
+    public boolean hasPathSum(TreeNode root, int targetSum) {
+        if (root == null) {
+            return false;
+        }
+        if (root.left == null && root.right == null) {
+            return targetSum == root.val;
+        }
+        return hasPathSum(root.left, targetSum - root.val) || hasPathSum(root.right, targetSum - root.val);
+    }
 
+
+    List<List<Integer>> result = new ArrayList<>();
+    LinkedList<Integer> tempList = new LinkedList<>();
+
+    /**
+     * 给你二叉树的根节点 root 和一个整数目标和 targetSum ，找出所有 从根节点到叶子节点 路径总和等于给定目标和的路径。
+     * 叶子节点 是指没有子节点的节点。
+     */
     public List<List<Integer>> pathSum(TreeNode root, int targetSum) {
         dfs(root, targetSum);
         return result;
@@ -21,15 +43,11 @@ public class PathSum {
         }
         tempList.add(node.val);
         sum -= node.val;
-        if (sum < 0) {
-            return;
-        }
         if (node.left == null && node.right == null && sum == 0) {
             result.add(new ArrayList<>(tempList));
-        } else {
-            dfs(node.left, sum);
-            dfs(node.right, sum);
         }
-        tempList.remove(tempList.size() - 1);
+        dfs(node.left, sum);
+        dfs(node.right, sum);
+        tempList.removeLast();
     }
 }
